CSS  alignment fix for changelist preview button

--- a/publisher/static/publisher/publisher.css
+++ b/publisher/static/publisher/publisher.css
@@ -12,6 +12,7 @@
     padding: 0;
     margin-left: 4px;
     margin-top: 3px;
+    vertical-align: middle;
 }
 
 .icon.publish {
